--- a/ArtMarket/public/login.html
+++ b/ArtMarket/public/login.html
@@ -49,7 +49,7 @@ if (isset($_POST["submit"])) {
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <!--custom css file link-->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 
 
