--- a/ArtMarket/public/login.html
+++ b/ArtMarket/public/login.html
@@ -73,7 +73,7 @@ if (isset($_POST["submit"])) {
             <input type="text" name="email" id = "username" placeholder="Enter your username" required class="box">
             <input type="password" name="password" id = "password" placeholder="Enter your password" required class="box">
             <input type="submit" name="submit" onclick = "submitForm()" value="login" class="btn">
-            <p>Don't have a VS account yet? <a href="register.html">Sign-Up</a></p>
+            <p>Don't have a VS account yet? <a href="/register">Sign-Up</a></p>
         </form>
     </div>
     <script src="./javascripts/login.js"></script>
