--- a/ArtMarket/public/register.html
+++ b/ArtMarket/public/register.html
@@ -85,7 +85,7 @@ if (isset($_POST["submit"])) {
                 <option value="seller">Seller</option>
             </select>
             <input type="submit" name = "submit" onclick="submitForm()" value = "sign in" class ="btn">
-            <p>Already have an Art Market account? <a href="login.html">Sign-in</a></p>
+            <p>Already have an Art Market account? <a href="/login">Sign-in</a></p>
         </form>
     </div>
     <script src="./javascripts/register.js"></script>
