Working seller page (Uploading artworks), MyArtworks (Viewing artworks), and MyProfile (editing user info)

--- a/ArtMarket/frontend/seller.html
+++ b/ArtMarket/frontend/seller.html
@@ -9,8 +9,8 @@
 <body>
 
   <div class="sidenav">
-    <a href="#">My Artworks</a>
-    <a href="#">My Profile</a>
+    <a href="MyArtworks.html">My Artworks</a>
+    <a href="MyProfile.html">My Profile</a>
   </div>
 
   <div class="main-content">
