Login and register

--- a/ArtMarket/frontend/register.html
+++ b/ArtMarket/frontend/register.html
@@ -32,12 +32,10 @@
             <input type="number" id="age" name="age" placeholder="Enter your age" required class="box">
             <select id="user_type" name="user_type" class="box">
                 <option value="user">user</option>
-                <option value="admin">admin</option>
                 <option value="seller">seller</option>
             </select>
-            <input type="password" id="adminkey" name="adminkey" placeholder="Enter admin-key if user-type is admin" class="box">
-            <button type="submit" onclick="submitForm()">register</button>
-            <p>Already have a VS account? <a href="">Sign-in</a></p>
+            <input type="submit" name = "submit" onclick="submitForm()" value = "sign in" class ="btn">
+            <p>Already have an Art Market account? <a href="login.html">Sign-in</a></p>
         </form>
     </div>
 
