SideNav added to MyProfile

--- a/ArtMarket/frontend/MyProfile.html
+++ b/ArtMarket/frontend/MyProfile.html
@@ -7,6 +7,11 @@
     <title>Edit User</title>
 </head>
 <body>
+    <div class="sidenav">
+        <a href="MyArtworks.html">My Artworks</a>
+        <a href="seller.html">Seller</a>
+      </div>
+
     <form>
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" placeholder="Enter your name">
