--- a/ArtMarket/frontend/Home.html
+++ b/ArtMarket/frontend/Home.html
@@ -16,6 +16,6 @@
 
   <button id="backButton">Back</button>
 
-  <script src="MyArtworks.js"></script>
+  <script src="Home.js"></script>
 </body>
 </html>
